# beer_party

./: .gitignore  CMakeLists.txt  build_and_run.sh  todolist
inc/: background.hpp  beer.hpp  button.hpp  constants.hpp  entity.hpp  main_menu.hpp  math.hpp  music_player.hpp  render_window.hpp  utils.hpp
inc/scenes/: beer_party_1.hpp  main_menu.hpp  scene_handler_base.hpp  scene_handler_main_menu.hpp  scene_handler_party_1.hpp
include/: beer.hpp  constants.hpp  entity.hpp  math.hpp  render_window.hpp  utils.hpp
src/: background.cpp  beer.cpp  button.cpp  entity.cpp  main.cpp  music_player.cpp  render_window.cpp  utils.cpp
src/scenes/: beer_party_1.cpp  main_menu.cpp  scene_handler_main_menu.cpp  scene_handler_party_1.cpp
